# passport-passwords

./: .gitignore  Cargo.toml  README.md  SDK-SETUP.md  TESTING.md  app-config.toml  build.rs  manifest.toml  permission_templates.toml
.github/workflows/: ci.yml
docs/: BACKUP.md  HARDWARE.md  KEYOS-PATCHES.md  PROTOCOL.md  keyos-integration.patch
extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  webusb-transport.js
i18n/: en.json
logic/: Cargo.toml
logic/vaults-bridge-core/: Cargo.toml
logic/vaults-bridge-core/src/: approval.rs  engine.rs  lib.rs  origin.rs  record.rs  session.rs  store.rs
logic/vaults-bridge-import/: Cargo.toml
logic/vaults-bridge-import/src/: lib.rs
logic/vaults-bridge-keystore/: Cargo.toml
logic/vaults-bridge-keystore/src/: lib.rs
logic/vaults-bridge-protocol/: Cargo.toml
logic/vaults-bridge-protocol/src/: frame.rs  lib.rs  message.rs
src/: backup_flow.rs  import_flow.rs  main.rs  master_key.rs  persist.rs  state.rs  transport.rs
src/transport/: websocket.rs  webusb.rs
ui/: app.slint  callbacks.slint  types.slint  ui
ui/compat/: theme.slint  widgets.slint
ui/pages/approval/: page.slint  props.slint
ui/pages/details/: page.slint  props.slint
ui/pages/edit/: page.slint  props.slint
ui/pages/main/: page.slint  props.slint
