# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "gui-app-passwords"
version = "0.1.0"
edition = "2021"
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
license = "GPL-3.0-or-later"

[dependencies]
# KeyOS plumbing
log = { workspace = true }
log-server = { workspace = true }
security = { workspace = true }
serde = { workspace = true }
server = { workspace = true }
slint-keyos-platform = { path = "../../slint-keyos-platform/runtime" }
usb = { workspace = true }
file-backed = { workspace = true }
fs = { workspace = true }

# Cross-target utilities
async-trait = "0.1"
anyhow = "1"
hex = "0.4"
oneshot = "0.1"
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

# Vaults Bridge logic crates, vendored under ./logic (its own sub-workspace).
vaults-bridge-core = { path = "logic/vaults-bridge-core" }
vaults-bridge-protocol = { path = "logic/vaults-bridge-protocol" }
vaults-bridge-keystore = { path = "logic/vaults-bridge-keystore" }
vaults-bridge-import = { path = "logic/vaults-bridge-import" }

# tokio + tokio-tungstenite power the WebSocket transport used by the
# hosted-mode simulator. mio doesn't compile for Xous so restrict to host.
[target.'cfg(not(target_os = "xous"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
dirs = "5"

[target.'cfg(target_os = "xous")'.dependencies]
xous = { path = "../../xous/xous-rs" }

[build-dependencies]
slint-keyos-platform-build = { path = "../../slint-keyos-platform/build", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
