# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "gui-app-passwords"
version = "0.1.0"
edition = "2021"
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
license = "GPL-3.0-or-later"

[workspace]

[patch.crates-io]
getrandom = { path = "../KeyOS-dev2/imports/getrandom" }

[dependencies]
# KeyOS plumbing
log = "0.4"
log-server = { package = "xous-api-log", path = "../KeyOS-dev2/xous/api/log" }
security = { path = "../KeyOS-dev2/api/security" }
serde = { version = "1", features = ["derive"] }
server = { path = "../KeyOS-dev2/server" }
slint-keyos-platform = { path = "../KeyOS-dev2/slint-keyos-platform/runtime" }
usb = { path = "../KeyOS-dev2/api/usb" }
file-backed = { path = "../KeyOS-dev2/utils/file-backed" }
fs = { path = "../KeyOS-dev2/api/fs" }

# Cross-target utilities
async-trait = "0.1"
anyhow = "1"
hex = "0.4"
oneshot = "0.1"
serde_json = "1"
# Force transitive random users onto KeyOS' Xous-aware getrandom fork.
getrandom = "=0.2.10"
# Keep this aligned with KeyOS' lockfile. simd-adler32 0.3.9 uses ARM NEON
# intrinsics that are unstable with the current armv7a-unknown-xous-elf toolchain.
simd-adler32 = "=0.3.7"
thiserror = "1"
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

# Vaults Bridge logic crates, vendored under ./logic (its own sub-workspace).
vaults-bridge-core = { path = "logic/vaults-bridge-core" }
vaults-bridge-protocol = { path = "logic/vaults-bridge-protocol" }
vaults-bridge-keystore = { path = "logic/vaults-bridge-keystore" }
vaults-bridge-import = { path = "logic/vaults-bridge-import" }

# tokio + tokio-tungstenite power the WebSocket transport used by the
# hosted-mode simulator. mio doesn't compile for Xous so restrict to host.
[target.'cfg(not(target_os = "xous"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
dirs = "5"

[target.'cfg(target_os = "xous")'.dependencies]
xous = { path = "../KeyOS-dev2/xous/xous-rs" }

[build-dependencies]
slint-keyos-platform-build = { path = "../KeyOS-dev2/slint-keyos-platform/build" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
