# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vaults-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vaults-bridge-protocol.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
hex = { workspace = true, features = ["std"] }
url.workspace = true
uuid = { workspace = true, features = ["std"] }
zeroize.workspace = true
x25519-dalek.workspace = true
hkdf = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
aes-gcm = { workspace = true, features = ["std"] }
rand_core = { workspace = true, features = ["std", "getrandom"] }
async-trait = "0.1"