# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vaults-bridge-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
vaults-bridge-protocol = { path = "../vaults-bridge-protocol" }
serde = { version = "1", default-features = false, features = ["derive", "alloc", "std"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "std"] }
thiserror = "1"
hex = { version = "0.4", default-features = false, features = ["alloc", "std"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4", "serde", "std"] }
zeroize = { version = "1.7", features = ["derive"] }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets"] }
hkdf = { version = "0.12", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes", "std"] }
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
async-trait = "0.1"
