# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vaults-bridge-import"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
thiserror = "1"
url = "2"
zeroize = { version = "1.7", features = ["derive"] }
