# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vaults-bridge-keystore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vaults-bridge-core.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
aes-gcm = { workspace = true, features = ["std"] }
hkdf = { workspace = true, features = ["std"] }
hmac = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
zeroize.workspace = true
rand_core = { workspace = true, features = ["std", "getrandom"] }
hex = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["std"] }
